00_backup/eksdev/devops/monitoring/apm/yaml/scouter-server/scouter-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scouter-server
  labels:
    app: scouter-server
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scouter-server
  template:
    metadata:
      labels:
        app: scouter-server
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: scouter-server
      containers:
      - name: scouter-server
        image: scouterapm/scouter-server:2.17.1
        ports:
          - containerPort: 6180
          - containerPort: 6100
            protocol: TCP
          - containerPort: 6100
            protocol: UDP
        imagePullPolicy: Always
        volumeMounts:
        - name: storage
          mountPath: /home/scouter-server/database
      nodeSelector:
        eks.amazonaws.com/nodegroup: sk-dev-eks-devops-worker-node
