00_backup/eksdev/devops/monitoring/apm/yaml/scouter-server/scouter-server-svc-loadbalancer-paper.yaml
apiVersion: v1
kind: Service
metadata:
  name: scouter-server-paper
  namespace: monitoring
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"

spec:
  selector:
    app: scouter-server
  type: LoadBalancer
  ports:
    - name: 'paper-port'
      port: 80
      targetPort: 6180
      protocol: TCP
